# explore-attacks

./: LICENSE  README.md  pyproject.toml
data_schemas/: adult.json
saved_attacks/: mia_closest_distance_acc.pkl
src/: attack_dpcgans.ipynb  call_generator.py  executable_generators.ipynb  generator_dp_cgans.py  generator_from_dataset.py  helpers.py  myexecutable.py  run_attack.py  tapas.ipynb  understanding_mia_tapas.ipynb  warning_running_dpcgan.py
