[tool.poetry]
name = "explore-attacks"
version = "0.1.0"
description = ""
authors = ["f-hafner <f.hafner@esciencecenter.nl>"]
readme = "README.md"
packages = [{include = "explore_attacks"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tapas = {git = "git@github.com:alan-turing-institute/privacy-sdg-toolbox.git"}
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"






